# CyberDesktop

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app-examples/: Cargo.toml
crates/app-examples/src/: main.rs  mpv_demo.rs
crates/app-media/: Cargo.toml
crates/app-media/src/: audio_decode.rs  audio_stream.rs  command.rs  error.rs  event.rs  ffmpeg_util.rs  lib.rs  metadata.rs  probe.rs  session.rs  source.rs  video_decode.rs  video_stream.rs
crates/app-mpv-ffi/: Cargo.toml  build.rs
crates/app-mpv-ffi/src/: lib.rs
crates/app-platform-windows/: Cargo.toml
crates/app-platform-windows/examples/: recycle_list.rs
crates/app-platform-windows/src/: com.rs  context_menu.rs  drag_leave.rs  drag_out.rs  hybrid_shell_session.rs  lib.rs  paths.rs  per_handler_shell.rs  recycle.rs  search.rs  sevenzip.rs  shell.rs  shell_folder.rs  shell_icon.rs  shell_menu_icon.rs  shell_menu_session.rs  shell_new.rs
crates/app-ui/: Cargo.toml
crates/app-ui/locales/: app.yml  editor.yml
crates/app-ui/src/: color_icon.rs  http_client_impl.rs  lib.rs  settings_window.rs  title_bar.rs  window.rs
crates/app/src/: cybereditor.rs  main.rs
crates/cyber-editor-engine/: Cargo.toml
crates/cyber-editor-engine/src/: languages.rs  lib.rs
crates/editor/: Cargo.toml  README.md  UPSTREAM  manifest-tiers.toml
crates/editor-app/: Cargo.toml  app-icon.rc  build.rs
crates/editor-app/src/: main.rs
crates/editor-ui/: Cargo.toml
crates/editor-ui/src/: lib.rs
crates/editor/agent_settings/: Cargo.toml
crates/editor/askpass/: Cargo.toml
crates/editor/assets/: Cargo.toml
crates/editor/auto_update/: Cargo.toml
crates/editor/auto_update_helper/: Cargo.toml
crates/editor/breadcrumbs/: Cargo.toml
crates/editor/buffer_diff/: Cargo.toml
crates/editor/client/: Cargo.toml
crates/editor/clock/: Cargo.toml
crates/editor/cloud_api_client/: Cargo.toml
crates/editor/cloud_api_types/: Cargo.toml
crates/editor/cloud_llm_client/: Cargo.toml
crates/editor/collections/: Cargo.toml
crates/editor/component/: Cargo.toml
crates/editor/context_server/: Cargo.toml
crates/editor/credentials_provider/: Cargo.toml
crates/editor/dap/: Cargo.toml
crates/editor/db/: Cargo.toml
crates/editor/edit_prediction_types/: Cargo.toml
crates/editor/editor/: Cargo.toml
crates/editor/env_var/: Cargo.toml
crates/editor/extension/: Cargo.toml
crates/editor/feature_flags/: Cargo.toml
crates/editor/feature_flags_macros/: Cargo.toml
crates/editor/file_icons/: Cargo.toml
crates/editor/fs/: Cargo.toml
crates/editor/fuzzy/: Cargo.toml
crates/editor/fuzzy_nucleo/: Cargo.toml
crates/editor/git/: Cargo.toml
crates/editor/git_hosting_providers/: Cargo.toml
crates/editor/gpui_shared_string/: Cargo.toml
crates/editor/gpui_tokio/: Cargo.toml
crates/editor/gpui_util/: Cargo.toml
crates/editor/grammars/: Cargo.toml
crates/editor/http_client/: Cargo.toml
crates/editor/http_client_tls/: Cargo.toml
crates/editor/icons/: Cargo.toml
crates/editor/language/: Cargo.toml
crates/editor/language_core/: Cargo.toml
crates/editor/language_model/: Cargo.toml
crates/editor/language_model_core/: Cargo.toml
crates/editor/lsp/: Cargo.toml
crates/editor/markdown/: Cargo.toml
crates/editor/menu/: Cargo.toml
crates/editor/migrator/: Cargo.toml
crates/editor/multi_buffer/: Cargo.toml
crates/editor/net/: Cargo.toml
crates/editor/node_runtime/: Cargo.toml
crates/editor/oauth_callback_server/: Cargo.toml
crates/editor/paths/: Cargo.toml
crates/editor/perf/: Cargo.toml
crates/editor/prettier/: Cargo.toml
crates/editor/project/: Cargo.toml
crates/editor/proto/: Cargo.toml
crates/editor/refineable/: Cargo.toml
crates/editor/release_channel/: Cargo.toml
crates/editor/remote/: Cargo.toml
crates/editor/remote_connection/: Cargo.toml
crates/editor/remote_server/: Cargo.toml
crates/editor/rope/: Cargo.toml
crates/editor/rpc/: Cargo.toml
crates/editor/session/: Cargo.toml
crates/editor/settings/: Cargo.toml
crates/editor/settings_content/: Cargo.toml
crates/editor/settings_json/: Cargo.toml
crates/editor/settings_macros/: Cargo.toml
crates/editor/snippet/: Cargo.toml
crates/editor/snippet_provider/: Cargo.toml
crates/editor/sqlez/: Cargo.toml
crates/editor/sqlez_macros/: Cargo.toml
crates/editor/sum_tree/: Cargo.toml
crates/editor/syntax_theme/: Cargo.toml
crates/editor/task/: Cargo.toml
crates/editor/telemetry/: Cargo.toml
crates/editor/telemetry_events/: Cargo.toml
crates/editor/terminal/: Cargo.toml
crates/editor/text/: Cargo.toml
crates/editor/theme/: Cargo.toml
crates/editor/theme_settings/: Cargo.toml
crates/editor/ui/: Cargo.toml
crates/editor/ui_input/: Cargo.toml
crates/editor/ui_macros/: Cargo.toml
crates/editor/util/: Cargo.toml
crates/editor/util_macros/: Cargo.toml
crates/editor/vim_mode_setting/: Cargo.toml
crates/editor/watch/: Cargo.toml
crates/editor/windows_resources/: Cargo.toml
crates/editor/workspace/: Cargo.toml
crates/editor/worktree/: Cargo.toml
crates/editor/zed_actions/: Cargo.toml
crates/editor/zed_credentials_provider/: Cargo.toml
crates/editor/zed_env_vars/: Cargo.toml
crates/editor/zeta_prompt/: Cargo.toml
crates/editor/zlog/: Cargo.toml
crates/editor/ztracing/: Cargo.toml
crates/editor/ztracing_macro/: Cargo.toml
crates/files-app/: Cargo.toml  app-icon.rc  build.rs
crates/files-app/src/: main.rs  shell_menu_test.rs
crates/files-core/: Cargo.toml
crates/files-core/src/: config.rs  history_store.rs  lib.rs  logging.rs  path_history.rs  search_history.rs  session_store.rs  startup_trace.rs
crates/files-fs/: Cargo.toml
crates/files-ui/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/src/: drives.rs  (+3 more)
crates/markdown-preview-engine/: Cargo.toml
crates/markdown-preview-ui/: Cargo.toml
crates/media-player-app/: Cargo.toml  app-icon.rc  build.rs
crates/media-player-ui/: Cargo.toml
crates/monitor-app/: Cargo.toml  app-icon.rc  build.rs
crates/text-engine/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui-editor/: Cargo.toml
(+567 files in other folders)
