[workspace]
members = [
    "crates/app",
    "crates/assets",
    "crates/commands",
    "crates/core",
    "crates/cyber-editor-engine",
    "crates/editor/agent_settings",
    "crates/editor/askpass",
    "crates/editor/assets",
    "crates/editor/auto_update",
    "crates/editor/auto_update_helper",
    "crates/editor/breadcrumbs",
    "crates/editor/buffer_diff",
    "crates/editor/clock",
    "crates/editor/cloud_api_client",
    "crates/editor/cloud_api_types",
    "crates/editor/cloud_llm_client",
    "crates/editor/collections",
    "crates/editor/component",
    "crates/editor/context_server",
    "crates/editor/credentials_provider",
    "crates/editor/dap",
    "crates/editor/edit_prediction_types",
    "crates/editor/editor",
    "crates/editor/env_var",
    "crates/editor/extension",
    "crates/editor/feature_flags",
    "crates/editor/feature_flags_macros",
    "crates/editor/file_icons",
    "crates/editor/fs",
    "crates/editor/fuzzy",
    "crates/editor/fuzzy_nucleo",
    "crates/editor/git",
    "crates/editor/git_hosting_providers",
    "crates/editor/gpui_shared_string",
    "crates/editor/gpui_tokio",
    "crates/editor/gpui_util",
    "crates/editor/grammars",
    "crates/editor/http_client",
    "crates/editor/http_client_tls",
    "crates/editor/icons",
    "crates/editor/language",
    "crates/editor/language_core",
    "crates/editor/language_model",
    "crates/editor/language_model_core",
    "crates/editor/lsp",
    "crates/editor/markdown",
    "crates/editor/menu",
    "crates/editor/migrator",
    "crates/editor/multi_buffer",
    "crates/editor/net",
    "crates/editor/node_runtime",
    "crates/editor/oauth_callback_server",
    "crates/editor/paths",
    "crates/editor/perf",
    "crates/editor/prettier",
    "crates/editor/project",
    "crates/editor/proto",
    "crates/editor/refineable",
    "crates/editor/release_channel",
    "crates/editor/remote",
    "crates/editor/remote_connection",
    "crates/editor/rope",
    "crates/editor/rpc",
    "crates/editor/session",
    "crates/editor/settings",
    "crates/editor/settings_content",
    "crates/editor/settings_json",
    "crates/editor/settings_macros",
    "crates/editor/snippet",
    "crates/editor/snippet_provider",
    "crates/editor/sqlez",
    "crates/editor/sqlez_macros",
    "crates/editor/sum_tree",
    "crates/editor/syntax_theme",
    "crates/editor/task",
    "crates/editor/telemetry",
    "crates/editor/telemetry_events",
    "crates/editor/terminal",
    "crates/editor/text",
    "crates/editor/theme",
    "crates/editor/theme_settings",
    "crates/editor/ui",
    "crates/editor/ui_input",
    "crates/editor/ui_macros",
    "crates/editor/util",
    "crates/editor/util_macros",
    "crates/editor/vim_mode_setting",
    "crates/editor/watch",
    "crates/editor/windows_resources",
    "crates/editor/workspace",
    "crates/editor/worktree",
    "crates/editor/zed_actions",
    "crates/editor/zed_credentials_provider",
    "crates/editor/zed_env_vars",
    "crates/editor/zeta_prompt",
    "crates/editor/zlog",
    "crates/editor/ztracing",
    "crates/editor/ztracing_macro",
    "crates/fs",
    "crates/platform-windows",
    "crates/ui",
    "crates/ui-editor"
]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
cyberfiles-assets = { path = "crates/assets" }
cyberfiles-commands = { path = "crates/commands" }
cyberfiles-core = { path = "crates/core" }
cyberfiles-fs = { path = "crates/fs" }
cyberfiles-platform-windows = { path = "crates/platform-windows" }
cyberfiles-ui = { path = "crates/ui", default-features = false }
cyberfiles-ui-editor = { path = "crates/ui-editor" }

# zed-industries/zed
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit"] }

# longbridge/gpui-component (git only; see docs/dependency-policy.md)
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }

anyhow = "1.0"
chrono = "0.4"
rust-i18n = "4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
unicode-width = "0.2"
embed-resource = "3"

# --- vendored editor engine (from crates/editor/Cargo.toml) ---
#
# Workspace member crates
#

acp_tools = { path = "crates/editor/acp_tools" }
acp_thread = { path = "crates/editor/acp_thread" }
action_log = { path = "crates/editor/action_log" }
activity_indicator = { path = "crates/editor/activity_indicator" }
agent = { path = "crates/editor/agent" }
agent_servers = { path = "crates/editor/agent_servers" }
agent_settings = { path = "crates/editor/agent_settings" }
agent_skills = { path = "crates/editor/agent_skills" }
agent_ui = { path = "crates/editor/agent_ui" }
ai_onboarding = { path = "crates/editor/ai_onboarding" }
anthropic = { path = "crates/editor/anthropic" }
askpass = { path = "crates/editor/askpass" }
assets = { path = "crates/editor/assets" }
audio = { path = "crates/editor/audio" }
auto_update = { path = "crates/editor/auto_update" }
auto_update_ui = { path = "crates/editor/auto_update_ui" }
aws_http_client = { path = "crates/editor/aws_http_client" }
bedrock = { path = "crates/editor/bedrock" }
breadcrumbs = { path = "crates/editor/breadcrumbs" }
buffer_diff = { path = "crates/editor/buffer_diff" }
call = { path = "crates/editor/call" }
channel = { path = "crates/editor/channel" }
cli = { path = "crates/editor/cli" }
client = { path = "crates/editor/client" }
clock = { path = "crates/editor/clock" }
cloud_api_client = { path = "crates/editor/cloud_api_client" }
cloud_api_types = { path = "crates/editor/cloud_api_types" }
cloud_llm_client = { path = "crates/editor/cloud_llm_client" }
collab = { path = "crates/editor/collab" }
collab_ui = { path = "crates/editor/collab_ui" }
collections = { path = "crates/editor/collections", version = "0.1.0" }
command_palette = { path = "crates/editor/command_palette" }
command_palette_hooks = { path = "crates/editor/command_palette_hooks" }
compliance = { path = "crates/editor/compliance" }
component = { path = "crates/editor/component" }
component_preview = { path = "crates/editor/component_preview" }
console = "0.16"
context_server = { path = "crates/editor/context_server" }
copilot = { path = "crates/editor/copilot" }
copilot_chat = { path = "crates/editor/copilot_chat" }
copilot_ui = { path = "crates/editor/copilot_ui" }
crashes = { path = "crates/editor/crashes" }
credentials_provider = { path = "crates/editor/credentials_provider" }
crossbeam = "0.8.4"
csv_preview = { path = "crates/editor/csv_preview"}
dap = { path = "crates/editor/dap" }
dap_adapters = { path = "crates/editor/dap_adapters" }
db = { path = "crates/editor/db" }
debug_adapter_extension = { path = "crates/editor/debug_adapter_extension" }
debugger_tools = { path = "crates/editor/debugger_tools" }
debugger_ui = { path = "crates/editor/debugger_ui" }
deepseek = { path = "crates/editor/deepseek" }
derive_refineable = { path = "crates/editor/refineable/derive_refineable" }
dev_container = { path = "crates/editor/dev_container" }
diagnostics = { path = "crates/editor/diagnostics" }
dialoguer = { version = "0.12", default-features = false }
editor = { path = "crates/editor/editor" }
encoding_selector = { path = "crates/editor/encoding_selector" }
env_var = { path = "crates/editor/env_var" }
etw_tracing = { path = "crates/editor/etw_tracing" }
eval_utils = { path = "crates/editor/eval_utils" }
extension = { path = "crates/editor/extension" }
extension_host = { path = "crates/editor/extension_host" }
extensions_ui = { path = "crates/editor/extensions_ui" }
feature_flags = { path = "crates/editor/feature_flags" }
feature_flags_macros = { path = "crates/editor/feature_flags_macros" }
feedback = { path = "crates/editor/feedback" }
file_finder = { path = "crates/editor/file_finder" }
file_icons = { path = "crates/editor/file_icons" }
fs = { path = "crates/editor/fs" }
fuzzy = { path = "crates/editor/fuzzy" }
fuzzy_nucleo = { path = "crates/editor/fuzzy_nucleo" }
git = { path = "crates/editor/git" }
git_graph = { path = "crates/editor/git_graph" }
git_hosting_providers = { path = "crates/editor/git_hosting_providers" }
git_ui = { path = "crates/editor/git_ui" }
go_to_line = { path = "crates/editor/go_to_line" }
google_ai = { path = "crates/editor/google_ai" }
grammars = { path = "crates/editor/grammars" }
gpui_shared_string = { git = "https://github.com/zed-industries/zed", package = "gpui_shared_string" }
gpui_linux = { path = "crates/editor/gpui_linux", default-features = false }
gpui_macos = { path = "crates/editor/gpui_macos", default-features = false }
gpui_macros = { git = "https://github.com/zed-industries/zed", package = "gpui_macros" }
gpui_web = { path = "crates/editor/gpui_web" }
gpui_wgpu = { path = "crates/editor/gpui_wgpu" }
gpui_windows = { path = "crates/editor/gpui_windows", default-features = false }
gpui_tokio = { path = "crates/editor/gpui_tokio" }
gpui_util = { path = "crates/editor/gpui_util" }
html_to_markdown = { path = "crates/editor/html_to_markdown" }
http_client = { git = "https://github.com/zed-industries/zed", package = "http_client" }
http_client_tls = { path = "crates/editor/http_client_tls" }
icons = { path = "crates/editor/icons" }
image_viewer = { path = "crates/editor/image_viewer" }
edit_prediction_types = { path = "crates/editor/edit_prediction_types" }
edit_prediction_ui = { path = "crates/editor/edit_prediction_ui" }
edit_prediction_context = { path = "crates/editor/edit_prediction_context" }
input_latency_ui = { path = "crates/editor/input_latency_ui" }
inspector_ui = { path = "crates/editor/inspector_ui" }
install_cli = { path = "crates/editor/install_cli" }
journal = { path = "crates/editor/journal" }
json_schema_store = { path = "crates/editor/json_schema_store" }
keymap_editor = { path = "crates/editor/keymap_editor" }
language = { path = "crates/editor/language" }
language_core = { path = "crates/editor/language_core" }
language_extension = { path = "crates/editor/language_extension" }
language_model = { path = "crates/editor/language_model" }
language_model_core = { path = "crates/editor/language_model_core" }
language_models = { path = "crates/editor/language_models" }
language_models_cloud = { path = "crates/editor/language_models_cloud" }
language_onboarding = { path = "crates/editor/language_onboarding" }
language_selector = { path = "crates/editor/language_selector" }
language_tools = { path = "crates/editor/language_tools" }
languages = { path = "crates/editor/languages" }
line_ending_selector = { path = "crates/editor/line_ending_selector" }
livekit_api = { path = "crates/editor/livekit_api" }
livekit_client = { path = "crates/editor/livekit_client" }
lmstudio = { path = "crates/editor/lmstudio" }
lsp = { path = "crates/editor/lsp" }
markdown = { path = "crates/editor/markdown" }
markdown_preview = { path = "crates/editor/markdown_preview" }
svg_preview = { path = "crates/editor/svg_preview" }
media = { path = "crates/editor/media" }
menu = { path = "crates/editor/menu" }
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "782b89a7da3f0e91e51f98d00a93acba679be6fb", default-features = false }
migrator = { path = "crates/editor/migrator" }
mistral = { path = "crates/editor/mistral" }
multi_buffer = { path = "crates/editor/multi_buffer" }
miniprofiler_ui = { path = "crates/editor/miniprofiler_ui" }
nc = { path = "crates/editor/nc" }
net = { path = "crates/editor/net" }
node_runtime = { path = "crates/editor/node_runtime" }
notifications = { path = "crates/editor/notifications" }
oauth_callback_server = { path = "crates/editor/oauth_callback_server" }
ollama = { path = "crates/editor/ollama" }
onboarding = { path = "crates/editor/onboarding" }
opencode = { path = "crates/editor/opencode" }
open_ai = { path = "crates/editor/open_ai" }
open_path_prompt = { path = "crates/editor/open_path_prompt" }
open_router = { path = "crates/editor/open_router", features = ["schemars"] }
outline = { path = "crates/editor/outline" }
outline_panel = { path = "crates/editor/outline_panel" }
panel = { path = "crates/editor/panel" }
paths = { path = "crates/editor/paths" }
perf = { path = "crates/editor/perf" }
picker = { path = "crates/editor/picker" }
prettier = { path = "crates/editor/prettier" }
settings_profile_selector = { path = "crates/editor/settings_profile_selector" }
project = { path = "crates/editor/project" }
project_panel = { path = "crates/editor/project_panel" }
project_symbols = { path = "crates/editor/project_symbols" }
prompt_store = { path = "crates/editor/prompt_store" }
proto = { path = "crates/editor/proto" }
recent_projects = { path = "crates/editor/recent_projects" }
refineable = { git = "https://github.com/zed-industries/zed", package = "refineable" }
release_channel = { path = "crates/editor/release_channel" }
remote = { path = "crates/editor/remote" }
remote_connection = { path = "crates/editor/remote_connection" }
remote_server = { path = "crates/editor/remote_server" }
repl = { path = "crates/editor/repl" }
reqwest_client = { path = "crates/editor/reqwest_client" }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "e50e726ddd0292f6ef9de0dda6b90af4ed1fb66a", features = ["wav", "playback", "wav_output", "recording"] }
rope = { path = "crates/editor/rope" }
rpc = { path = "crates/editor/rpc" }
rules_library = { path = "crates/editor/rules_library" }
scheduler = { path = "crates/editor/scheduler" }
search = { path = "crates/editor/search" }
session = { path = "crates/editor/session" }
sidebar = { path = "crates/editor/sidebar" }
settings = { path = "crates/editor/settings" }
settings_content = { path = "crates/editor/settings_content" }
settings_json = { path = "crates/editor/settings_json" }
settings_macros = { path = "crates/editor/settings_macros" }
settings_ui = { path = "crates/editor/settings_ui" }
shell_command_parser = { path = "crates/editor/shell_command_parser" }
snippet = { path = "crates/editor/snippet" }
snippet_provider = { path = "crates/editor/snippet_provider" }
snippets_ui = { path = "crates/editor/snippets_ui" }
sqlez = { path = "crates/editor/sqlez" }
sqlez_macros = { path = "crates/editor/sqlez_macros" }
streaming_diff = { path = "crates/editor/streaming_diff" }
sum_tree = { path = "crates/editor/sum_tree" }
codestral = { path = "crates/editor/codestral" }
system_specs = { path = "crates/editor/system_specs" }
syntax_theme = { path = "crates/editor/syntax_theme" }
tab_switcher = { path = "crates/editor/tab_switcher" }
task = { path = "crates/editor/task" }
tasks_ui = { path = "crates/editor/tasks_ui" }
telemetry = { path = "crates/editor/telemetry" }
telemetry_events = { path = "crates/editor/telemetry_events" }
terminal = { path = "crates/editor/terminal" }
terminal_view = { path = "crates/editor/terminal_view" }
text = { path = "crates/editor/text" }
theme = { path = "crates/editor/theme" }
theme_extension = { path = "crates/editor/theme_extension" }
theme_settings = { path = "crates/editor/theme_settings" }
theme_selector = { path = "crates/editor/theme_selector" }
time_format = { path = "crates/editor/time_format" }
platform_title_bar = { path = "crates/editor/platform_title_bar" }
title_bar = { path = "crates/editor/title_bar" }
toolchain_selector = { path = "crates/editor/toolchain_selector" }
ui = { path = "crates/editor/ui" }
ui_input = { path = "crates/editor/ui_input" }
ui_macros = { path = "crates/editor/ui_macros" }
ui_prompt = { path = "crates/editor/ui_prompt" }
util = { path = "crates/editor/util" }
util_macros = { path = "crates/editor/util_macros" }
vim = { path = "crates/editor/vim" }
vim_mode_setting = { path = "crates/editor/vim_mode_setting" }
which_key = { path = "crates/editor/which_key" }

watch = { path = "crates/editor/watch" }
web_search = { path = "crates/editor/web_search" }
web_search_providers = { path = "crates/editor/web_search_providers" }
workspace = { path = "crates/editor/workspace" }
worktree = { path = "crates/editor/worktree" }
x_ai = { path = "crates/editor/x_ai" }
zed = { path = "crates/editor/zed" }
zed_actions = { path = "crates/editor/zed_actions" }
zed_credentials_provider = { path = "crates/editor/zed_credentials_provider" }
zed_env_vars = { path = "crates/editor/zed_env_vars" }
edit_prediction = { path = "crates/editor/edit_prediction" }
edit_prediction_metrics = { path = "crates/editor/edit_prediction_metrics" }
zeta_prompt = { path = "crates/editor/zeta_prompt" }
zlog = { path = "crates/editor/zlog" }
zlog_settings = { path = "crates/editor/zlog_settings" }
ztracing = { path = "crates/editor/ztracing" }
ztracing_macro = { path = "crates/editor/ztracing_macro" }

#
# External crates
#

agent-client-protocol = { version = "=0.12.1", features = ["unstable"] }
aho-corasick = "1.1"
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "9d9640d4" }
any_vec = "0.14"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compat = "0.2.1"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-dispatcher = "0.1"
async-fs = "2.1"
async-io = "2.6.0"
async-lock = "3.4.2"
async-pipe = { git = "https://github.com/zed-industries/async-pipe-rs", rev = "82d00a04211cf4e1236029aa03e6b6ce2a74c553" }
async-recursion = "1.0.0"
async-tar = "0.5.1"
async-task = "4.7"
async-trait = "0.1"
async-tungstenite = "0.31.0"
async-process = "2.5.0"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
aws-config = { version = "1.8.10", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.8", features = [
    "hardcoded-credentials",
] }
aws-sdk-bedrockruntime = { version = "1.112.0", features = [
    "behavior-version-latest",
] }
aws-smithy-runtime-api = { version = "1.9.2", features = ["http-1x", "client"] }
aws-smithy-types = { version = "1.3.4", features = ["http-body-1-x"] }
backtrace = "0.3"
base64 = "0.22"
bitflags = "2.6.0"
brotli = "8.0.2"
bytes = "1.0"
cargo_metadata = "0.19"
cargo_toml = "0.21"
brush-parser = "0.3"
cfg-if = "1.0.3"
chardetng = "0.1"
ciborium = "0.2"
circular-buffer = "1.0"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
const_format = "0.2"
convert_case = "0.8.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
cpal = "0.17"
crash-handler = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
ctor = "0.4.0"
dap-types = { git = "https://github.com/zed-industries/dap-types", rev = "1b461b310481d01e02b2603c16d7144b926339f8" }
dashmap = "6.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dotenvy = "0.15.0"
dunce = "1.0"
ec4rs = "1.1"
emojis = "0.6.1"
env_logger = "0.11"
encoding_rs = "0.8"
exec = "0.3.1"
fancy-regex = "0.17.0"
fork = "0.4.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
gh-workflow = { git = "https://github.com/zed-industries/gh-workflow", rev = "37f3c0575d379c218a9c455ee67585184e40d43f" }
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
heapless = "0.9.2"
handlebars = "4.3"
heck = "0.5"
hdrhistogram = "7"
heed = { version = "0.21.0", features = ["read-txn-no-tls"] }
hex = "0.4.3"
human_bytes = "0.4.1"
html5ever = "0.27.0"
http = "1.1"
http-body = "1.0"
ignore = "0.4.22"
image = "0.25.1"
imara-diff = "0.1.8"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
json_dotpath = "crates/editor/1.1"
jsonschema = "0.37.0"
jsonwebtoken = "10.0"
jupyter-protocol = "1.4.0"
jupyter-websocket-client = "1.1.0"
libc = "0.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
linkify = "0.10.0"
libwebrtc = "0.3.26"
livekit = { version = "0.7.32", features = ["tokio", "rustls-tls-native-roots"] }
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
lsp-types = { git = "https://github.com/zed-industries/lsp-types", rev = "f4dfa89a21ca35cd929b70354b1583fabae325f8" }
mach2 = "0.5"
markup5ever_rcdom = "0.3.0"
metal = "0.33"
minidumper = "0.9"
moka = { version = "0.12.10", features = ["sync"] }
nanoid = "0.4"
nbformat = "1.2.0"
nix = "0.29"
nucleo = "0.5"
num-format = "0.4.4"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSCoder",
    "NSData",
    "NSDate",
    "NSDictionary",
    "NSEnumerator",
    "NSError",
    "NSGeometry",
    "NSNotification",
    "NSNull",
    "NSObjCRuntime",
    "NSObject",
    "NSProcessInfo",
    "NSRange",
    "NSRunLoop",
    "NSString",
    "NSURL",
    "NSUndoManager",
    "NSValue",
    "objc2-core-foundation",
    "std",
] }
open = "5.0.0"
ordered-float = "2.1.1"
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
partial-json-fixer = "0.5.3"
parse_int = "0.9"
pciid-parser = "0.8.0"
pathdiff = "0.2"
percent-encoding = "2.3.2"
pet = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-conda = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-core = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-fs = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-poetry = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-reporter = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
pet-virtualenv = { git = "https://github.com/microsoft/python-environment-tools.git", rev = "9e61a22af989fe54937bf07c9f9cff1bc53d9056" }
portable-pty = "0.9.0"
postage = { version = "0.5", features = ["futures-traits"] }
pretty_assertions = { version = "1.3.0", features = ["unstable"] }
proc-macro2 = "1.0.93"
profiling = "1"
# replace this with main when #635 is merged
proptest = { git = "https://github.com/proptest-rs/proptest", rev = "3dca198a8fef1b32e3a66f1e1897c955b4dc5b5b", features = ["attr-macro"] }
proptest-derive = "0.8.0"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
pollster = "0.4.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
quick-xml = "0.38"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
# WARNING: If you change this, you must also publish a new version of zed-reqwest to crates.io
reqwest = { git = "https://github.com/zed-industries/reqwest.git", rev = "c15662463bda39148ba154100dd44d3fba5873a4", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "zed-reqwest", version = "0.12.15-zed" }
rsa = "0.9.6"
runtimelib = { version = "1.4.0", default-features = false, features = [
    "async-dispatcher-runtime", "aws-lc-rs"
] }
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
rustls = { version = "0.23.26" }
rustls-platform-verifier = "0.5.0"
# WARNING: If you change this, you must also publish a new version of zed-scap to crates.io
scap = { git = "https://github.com/zed-industries/scap", rev = "4afea48c3b002197176fb19cd0f9b180dd36eaac", default-features = false, package = "zed-scap", version = "0.0.8-zed" }
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde_yaml_ng = "0.10"
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_path_to_error = "0.1.17"
serde_urlencoded = "0.7"
sha2 = "0.10"
shellexpand = "3.1"
shlex = "1.3.0"
simplelog = "0.12.2"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
sqlformat = "0.2"
stacksafe = "0.1"
streaming-iterator = "0.1"
strsim = "0.11"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
sysinfo = "0.37.0"
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = { version = "0.3", features = [
    "macros",
    "parsing",
    "serde",
    "serde-well-known",
    "formatting",
    "local-offset",
] }
tiny_http = "0.12"
tokio = { version = "1" }
tokio-socks = { version = "0.5.2", default-features = false, features = [
    "futures-io",
    "tokio",
] }
toml = "0.8"
toml_edit = { version = "0.22", default-features = false, features = [
    "display",
    "parse",
    "serde",
] }
tower-http = "0.4.4"
tree-sitter = { version = "0.26.8", features = ["wasm"] }
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5cb9b693cfd7bfacab1d9ff4acac1a4150700609" }
tree-sitter-css = "0.23"
tree-sitter-diff = "0.1.0"
tree-sitter-elixir = "0.3"
tree-sitter-embedded-template = "0.23.0"
tree-sitter-gitcommit = { git = "https://github.com/zed-industries/tree-sitter-git-commit", rev = "88309716a69dd13ab83443721ba6e0b491d37ee9" }
tree-sitter-go = "0.25"
tree-sitter-go-mod = { git = "https://github.com/camdencheek/tree-sitter-go-mod", rev = "2e886870578eeba1927a2dc4bd2e2b3f598c5f9a", package = "tree-sitter-gomod" }
tree-sitter-gowork = { git = "https://github.com/zed-industries/tree-sitter-go-work", rev = "acb0617bf7f4fda02c6217676cc64acb89536dc7" }
tree-sitter-heex = { git = "https://github.com/zed-industries/tree-sitter-heex", rev = "1dd45142fbb05562e35b2040c6129c9bca346592" }
tree-sitter-html = "0.23"
tree-sitter-jsdoc = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
tree-sitter-python = "0.25"
tree-sitter-regex = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" } # https://github.com/tree-sitter/tree-sitter-typescript/pull/347
tree-sitter-yaml = { git = "https://github.com/zed-industries/tree-sitter-yaml", rev = "baff0b51c64ef6a1fb1f8390f3ad6015b83ec13a" }
tracing = "0.1.40"
unicase = "2.6"
unicode-script = "0.5.7"
unicode-segmentation = "1.10"
unindent = "0.2.0"
url = "2.2"
urlencoding = "2.1.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
wasm-encoder = "0.221"
wasmparser = "0.221"
wasmtime = { version = "36", default-features = false, features = [
    "async",
    "demangle",
    "runtime",
    "cranelift",
    "component-model",
    "incremental-cache",
    "parallel-compilation",
] }
wasmtime-wasi = "36"
wax = "0.7"
which = "6.0.0"
wasm-bindgen = "0.2.120"
web-time = "1.1.0"
webrtc-sys = "0.3.23"
wgpu = { git = "https://github.com/zed-industries/wgpu.git", rev = "357a0c56e0070480ad9daea5d2eaa83150b79e88" }
windows-core = "0.61"
yaml-rust2 = "0.8"
yawc = "0.2.5"
zeroize = "1.8"
zstd = "0.11"


cyber-editor-engine = { path = "crates/cyber-editor-engine" }

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

