[package]
name = "app-mpv-ffi"
description = "Minimal libmpv FFI wrapper for CyberDesktop demos"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
tracing.workspace = true
libloading = "0.8"
image = { version = "0.25", default-features = false, features = ["png"] }
