[package]
name = "app-platform-windows"
description = "Windows Shell integration for CyberDesktop"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
app-sevenzip-ffi = { path = "../app-sevenzip-ffi" }
image = { version = "0.25", default-features = false, features = ["png"] }
clipboard-win = { version = "5.4", features = ["std"] }
windows-core = "0.58"
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Search",
    "Win32_Globalization",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_SystemServices",
    "Win32_Storage_EnhancedStorage",
    "Win32_Storage_FileSystem",
    "Win32_System_Variant",
] }
