[package]
name = "app-ui"
description = "Shared UI components and editor shell for CyberDesktop applications"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
editor-shell = []
full-app = []

[dependencies]
anyhow.workspace = true
app-assets.workspace = true
editor-text-engine.workspace = true
files-core.workspace = true
gpui.workspace = true
gpui-component.workspace = true
rfd.workspace = true
rust-i18n.workspace = true
schemars = "1.2"
serde.workspace = true
serde_json.workspace = true
smallvec = "1"
sys-locale.workspace = true
tracing.workspace = true
