[package]
name = "cyberfiles"
description = "CyberFiles desktop application"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "cyberfiles"
path = "src/main.rs"
required-features = ["full-app"]

[[bin]]
name = "cybereditor"
path = "src/cybereditor.rs"
required-features = ["zed-engine"]

[features]
default = ["full-app"]
full-app = ["dep:cyberfiles-ui"]
zed-engine = ["cyberfiles-ui-editor/zed-engine"]

[dependencies]
cyberfiles-ui = { workspace = true, features = ["full-app"], optional = true }
cyberfiles-ui-editor.workspace = true
gpui_platform.workspace = true

[build-dependencies]
embed-resource.workspace = true
