[package]
name = "cyberfiles"
description = "CyberFiles desktop application"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "cyberfiles"
path = "src/main.rs"
required-features = ["full-app"]

[[bin]]
name = "cybereditor"
path = "src/cybereditor.rs"

[features]
default = ["full-app"]
full-app = ["dep:cyberfiles-ui"]

[dependencies]
cyberfiles-ui = { workspace = true, features = ["full-app"], optional = true }
cyberfiles-ui-editor.workspace = true
gpui_platform.workspace = true

[build-dependencies]
embed-resource.workspace = true
