[package]
name = "cyber-desktop"
description = "CyberDesktop — multi-app workspace (cyber_files, cyber_editor)"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "cyber_files"
path = "src/main.rs"
required-features = ["full-app"]

[[bin]]
name = "cyber_editor"
path = "src/cybereditor.rs"

[features]
default = ["full-app"]
full-app = ["dep:cyber-desktop-ui"]

[dependencies]
cyber-desktop-core.workspace = true
cyber-desktop-ui = { workspace = true, features = ["full-app"], optional = true }
cyber-desktop-ui-editor.workspace = true
gpui_platform.workspace = true

[build-dependencies]
embed-resource.workspace = true
