[package]
name = "cyber-editor-engine"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "Thin glue between CyberEditor and the vendored Zed editor stack"
license = "GPL-3.0-or-later"

[dependencies]
anyhow.workspace = true
assets.workspace = true
editor.workspace = true
futures-lite.workspace = true
gpui.workspace = true
grammars = { workspace = true, features = ["load-grammars"] }
language = { workspace = true }
log.workspace = true
multi_buffer.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
util.workspace = true
